@@ -14,6 +14,11 @@ small - this just lets others know that the file has changed if nothing
 else.  With this, include the file(s) that you changed.
 ------------------------------------------------------------------------------
 
+plugins/cfanim/cfanim.c, plugins/cflogger/cflogger.c:  Fix some minor issues
+  (variables that should have been static, using 0 instead of NULL, leading to
+  more confusing code) found using the static analysis tool "sparse".
+Arvid Norlander 2009-02-07
+
 server/init.c: Avoid some warnings by casting function to one with the right
   type before calling. Also convert some char* to const char* and make the
   variable options static.
